--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -8,16 +8,24 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
-    <div class="w-1/2 mx-auto  mt-10">
+    <div class="w-1/2 mx-auto  mt-10 p-3 border-2 border-black">
         <div>
             {% if message %}
                 <p>{{message}}</p>
             {% endif %}
         </div>
         <div>
+            <div>
+                {% if messages %}
+                    {% for message in messages %}
+                        <p>{{message}}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
             <form action="" method="POST">
                 {% csrf_token %}
-                {{form.as_p}}
+                {{task_form.as_p}}
+                {{task_detail_form.as_p}}
                 <button type="submit" class="bg-rose-500 p-2 mt-4 rounded-sm">Submit </button>
             </form>
         </div>
