--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <h1>Welcome to authentication system</h1>
@@ -14,6 +14,8 @@
                 <p>{{error}}</p>
             {% endfor %}
          {% endif %}
+
+         {% comment %} printing the form field separately  {% endcomment %}
         <form action="" method="POST">
             {% csrf_token %}
             {% for field in form %}
