--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -22,7 +22,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
-            <form action="" method="POST">
+            <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{task_form.as_p}}
                 {{task_detail_form.as_p}}
