--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,7 +20,7 @@
       
       {% endblock content %}
     </main>
-
+{% comment %} footer {% endcomment %}
     <footer class="bg-gray-800 text-white py-12">
       <div class="container mx-auto px-6">
         <div class="flex flex-wrap justify-between">
