--- a/users/templates/accounts/password_change.html
+++ b/users/templates/accounts/password_change.html
@@ -19,8 +19,7 @@
     <form action="" method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Submit</button>
+        <button type="submit">Change Password</button>
     </form>
-    <p><a href="{% url 'password-reset' %}">Forgot Password</a></p>
 </div>
 {% endblock content %}
