--- a/users/templates/admin/group_list.html
+++ b/users/templates/admin/group_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/dashboard.html" %}
-{% block content %}
+{% block admin_content %}
       <h2 class="text-2xl font-bold mb-4">Groups and Permissions</h2>
       <div class="overflow-x-auto">
         <table class="table-auto w-full border-collapse border border-gray-300">
@@ -30,4 +30,4 @@
           </tbody>
         </table>
       </div>
-{% endblock content %} 
+{% endblock admin_content %} 
