--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -19,6 +19,11 @@
             class="text-gray-600 hover:text-gray-800"
             >Create Group</a
           >
+          <a
+            href="{% url 'profile' %}"
+            class="text-gray-600 hover:text-gray-800"
+            >Profile</a
+          >
         </div>
         <div class="flex items-center">
           <div class="relative">
