--- a/tasks/templates/show_task.html
+++ b/tasks/templates/show_task.html
@@ -16,16 +16,24 @@
         <li class="my-8 bg-gray-100 border border-violet-900 shadow-xl rounded-lg p-4">
             <p class="text-lg font-bold my-2">{{task.title}}</p>
             <div class="flex justify-between">
-                <p>
-                    <span class="font-semibold">Description: </span>
-                    {{task.description}}
-                </p>
-                <ul>
+                <div>
+                    <p>
+                        <span class="font-semibold">Project: </span> 
+                        {{task.project.name}}
+                    </p>
+                    <p>
+                        <span class="font-semibold">Description: </span>
+                        {{task.description}}
+                    </p>
+                </div>
+                <div >
                     <p class="text-blue-950 font-semibold">Assigned To: </p>
-                    {% for emp in task.assigned_to.all %}
-                        <li>{{emp.first_name}} {{emp.last_name}}</li>
-                    {% endfor %}
-                </ul>
+                    <ul class="list-disc">
+                        {% for emp in task.assigned_to.all %}
+                            <li >{{emp.first_name}} {{emp.last_name}}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </li>
         {% endfor %}
