--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -10,9 +10,24 @@
             class="text-gray-600 hover:text-gray-800"
             >Dashboard</a
           >
-          <a href="{% url "view-task" %}" class="text-gray-600 hover:text-gray-800">Tasks</a>
+          <a href="{% url 'project-list' %}" class="text-gray-600 hover:text-gray-800"
+            >Projects
+          </a>
+          <a href="{% url 'view-task' %}" class="text-gray-600 hover:text-gray-800"
+            >Tasks
+          </a>
           <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
             >Groups</a
+          >
+          <a
+            href="{% url 'create-project' %}"
+            class="text-gray-600 hover:text-gray-800"
+            >Create Project</a
+          >
+          <a
+            href="{% url 'create-task' %}"
+            class="text-gray-600 hover:text-gray-800"
+            >Create Task</a
           >
           <a
             href="{% url 'create-group' %}"
