--- a/users/templates/accounts/password_change.html
+++ b/users/templates/accounts/password_change.html
@@ -1,25 +1,46 @@
 {% extends "base.html" %}
 {% block content %}
-<div>
-    {% comment %} for non-field errors {% endcomment %}
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-            <p>{{error}}</p>
-        {% endfor %}
-    {% endif %}
-</div>
-<div>
-    {% if messages %}
-        {% for message in messages %}
-        <p>{{message}}</p>
-        {% endfor %}
-    {% endif %}
-</div>
-<div>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Change Password</button>
-    </form>
+<h1 class="text-3xl font-bold text-center my-4">Change Password</h1>
+<div class="w-1/3 mx-auto p-4 border-2 rounded-md border-violet-950 shadow-xl">
+    <div>
+        {% comment %} for non-field errors {% endcomment %}
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p class="p-2 border-2 border-black my-2 bg-red-300 font-semibold rounded-sm">
+                    {{error}}
+                </p>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <div>
+        {% if messages %}
+            {% for message in messages %}
+            <p>
+                {{message}}
+            </p>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <div>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% comment %} {{form.as_p}} {% endcomment %}
+            {% for field in form %}
+                <label 
+                    for="{{field.id_for_label}}"
+                    class="font-semibold">
+                    {{field.label}}
+                </label>
+                <div>
+                    {{field}}
+                </div>
+            {% endfor %}
+            <button 
+                type="submit"
+                class="w-full p-4 my-4 bg-violet-600 hover:bg-violet-950 text-white font-bold text-lg border-2">
+                Change Password
+            </button>
+        </form>
+    </div>
 </div>
 {% endblock content %}
