--- a/users/templates/accounts/update_profile.html
+++ b/users/templates/accounts/update_profile.html
@@ -1,15 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class='mx-auto w-1/2 my-9'>
-        {% if messages %}
-            {% for message in messages %}
-                <div class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %} ">{{message}}</div>
-            {% endfor %}
-        {% endif %}
-        <form method='POST' enctype='multipart/form-data'>
-            {% csrf_token %}
-            {{ form }}
-            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-3' type="submit">Update Profile</button>
-        </form>
-    </div>
+<div class='w-full mx-2 md:mx-auto  md:w-1/3 my-9  border-2 rounded-md p-4'>
+    <h1 class="text-3xl text-center font-bold mb-4">Update Profile</h1>
+    {% if messages %}
+        {% for message in messages %}
+            <div 
+                class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %} "
+                >{{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
+    <form method='POST' enctype='multipart/form-data'>
+        {% csrf_token %}
+        {% comment %} {{ form }} {% endcomment %}
+        {% for field in form %}
+            <label 
+                for="{{field.id_for_label}}"
+                class="font-bold">
+                {{field.label}}
+            </label>
+            <div>
+                {{field}}
+            </div>
+        {% endfor %}
+        <button 
+            class='w-full bg-blue-500 p-4 rounded-md hover:bg-blue-950 text-white mt-3' 
+            type="submit">Update Profile
+        </button>
+    </form>
+</div>
 {% endblock content %}
