project update delete & sidebar & some design

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,10 +16,20 @@
     {% else %}
         {% include "non_logged_nav.html" %}
     {% endif %}
-    <main>
-      {% block content %}
-      
-      {% endblock content %}
+    {% comment %} flex min-h-screen {% endcomment %}
+    <main class="grid grid-cols-12">
+      {% comment %} SideBar {% endcomment %}
+      {% if user.is_authenticated %}
+        <div class="col-span-2 h-screen">
+            {% include "sidebar.html" %}
+        </div>
+      {% endif %}
+      {% comment %} Main Content {% endcomment %}
+      <div class="{% if user.is_authenticated %}col-span-10{% else %}col-span-12{% endif %}">
+        {% block content %}
+        
+        {% endblock content %}
+      </div>
     </main>
 {% comment %} footer {% endcomment %}
     <div class="mt-4">
