--- a/users/templates/admin/user_list.html
+++ b/users/templates/admin/user_list.html
@@ -1,4 +1,5 @@
 <div class="container mx-auto p-6">
+  <h1 class="text-3xl text-center font-bold my-4">All Users </h1>
     <div class="overflow-x-auto">
       <table class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
         <thead class="bg-gray-100">
